--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "ES2020",
-    "useDefineForClassFields": true
+    "useDefineForClassFields": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "src"
